# hypr-greeter

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO  config.example.toml  config.json  config.toml  hypr-greeter-wrapper.sh  install.sh  uninstall.sh
src/: bootstrap.rs  config.rs  greetd_client.rs  main.rs  ui.rs
